userspace_app/fortio/config_yaml/client-vservice.yaml
# Source: benchmark/templates/fortio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fortioclient
  namespace: twopods-istio
spec:
  hosts:
  - fortioclient.local
  gateways:
  - fortio-gateway
  http:
  - route:
    - destination:
        host: fortioclient
        port:
          number: 8080
