userspace_app/fortio/config_yaml/server-vservice.yaml
# Source: benchmark/templates/fortio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fortioserver
  namespace: twopods-istio
spec:
  hosts:
  - fortioserver.local
  gateways:
  - fortio-gateway
  http:
  - route:
    - destination:
        host: fortioserver
        port:
          number: 8080
